Add comments, make some code more readable, also fix the remaining time not updated correctly

BUG:180132

svn path=/trunk/KDE/kdenetwork/kget/; revision=909105