core/transfer.h
@@ -44,22 +44,23 @@ class KGET_EXPORT Transfer : public Job
         enum TransferChange
         {
             Tc_None           = 0x00000000,
-            // These flags respect the Model columns order
+            // These flags respect the Model columns order NOTE: The model only checks the last 8 bits, so all values which need to be updated by the model should look like: 0x000000xx
             Tc_FileName       = 0x00000001,
             Tc_Status         = 0x00000002,
             Tc_TotalSize      = 0x00000004,
             Tc_Percent        = 0x00000008,
             Tc_DownloadSpeed  = 0x00000010,
-            Tc_UploadSpeed    = 0x00000016,
+            Tc_RemainingTime  = 0x00000020,
             // Misc
-            Tc_UploadLimit    = 0x00000100,
-            Tc_DownloadLimit  = 0x00000200,
-            Tc_CanResume      = 0x00000400,
-            Tc_DownloadedSize = 0x00000800,
-            Tc_UploadedSize   = 0x00001000,
-            Tc_Log            = 0x00002000,
-            Tc_Group          = 0x00004000,
-            Tc_Selection      = 0x00006000
+            Tc_UploadSpeed    = 0x00000100,
+            Tc_UploadLimit    = 0x00000200,
+            Tc_DownloadLimit  = 0x00000400,
+            Tc_CanResume      = 0x00000800,
+            Tc_DownloadedSize = 0x00001000,
+            Tc_UploadedSize   = 0x00002000,
+            Tc_Log            = 0x00004000,
+            Tc_Group          = 0x00008000,
+            Tc_Selection      = 0x00010000
         };
 
         enum LogLevel
